:building_construction: Extension style sheets are no longer injected by stackoverflow_snippets.js
The Google dark mode script is still additionally injected only for development purposes.

--- a/stylesheets/google_darkmode.css
+++ b/stylesheets/google_darkmode.css
@@ -124,8 +124,9 @@ a, a:visited, a:link, a.fl:link, .WpKAof {
    box-shadow: 0 1px 3px rgba(0, 0, 0, .5);
 }
 
+/* Host part of the result breadcrumb */
 cite, cite a:link, cite a:visited {
-   color: #DFDEDB;
+   color: #DFDEDB !important;
 }
 
 #hdtb-msb .hdtb-mitem.hdtb-msel {
